--- a/Android App/TrainTracking2/app/src/main/res/values/strings.xml
+++ b/Android App/TrainTracking2/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">TrainTracking</string>
+    <string name="app_name">Train Tracking And Reservation App</string>
 </resources>
